--- a/index.html
+++ b/index.html
@@ -3,30 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>鸢栀的项目库</title>
+    <title>GitHub Portfolio</title>
     <link rel="stylesheet" href="/github.min.css">
     <link rel="stylesheet" href="/github-dark.min.css">
     <script src="/highlight.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
-    <button class="theme-switch" onclick="toggleTheme()">
-        <svg class="moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <path d="M12 3a6 6 0 0 0-6 6c0 3.314 2.686 6 6 6s6-2.686 6-6c0-3.314-2.686-6-6-6zm0-2a8 8 0 1 1 0 16 8 8 0 0 1 0-16z"/>
-        </svg>
-    </button>
     <div class="container">
         <div class="profile-section">
             <div class="profile-card">
                 <div class="profile-header">
-                    <img src="https://github.com/identicons/default.png" alt="Profile" class="profile-img">
+                    <img src="https://github.com/identicons/default.png" alt="Profile Image" class="profile-img">
                     <div class="profile-info">
                         <h1 class="profile-name">Your Name</h1>
-                        <div class="profile-login">@yourusername</div>
+                        <div class="profile-login">@username</div>
                     </div>
                 </div>
                 
-                <p>Your bio goes here</p>
+                <p>Your bio here</p>
                 
                 <div class="social-links">
                     <a href="#" class="social-link" target="_blank">
@@ -49,20 +44,23 @@
                     </a>
                 </div>
                 <div class="stats">
-                    <svg><path d="M2 2.5A2.5 2.5 0 014.5 0h8.75a.75.75 0 01.75.75v12.5a.75.75 0 01-.75.75h-2.5a.75.75 0 110-1.5h1.75v-2h-8a1 1 0 00-.714 1.7.75.75 0 01-1.072 1.05A2.495 2.495 0 012 11.5v-9zm10.5-1V9h-8c-.356 0-.694.074-1 .208V2.5a1 1 0 011-1h8zM5 12.25v3.25a.25.25 0 00.4.2l1.45-1.087a.25.25 0 01.3 0L8.6 15.7a.25.25 0 00.4-.2v-3.25a.25.25 0 00-.25-.25h-3.5a.25.25 0 00-.25.25z"></path></svg>
-                    <span>项目库</span>
+                    <a href="#" class="social-link theme-switch" onclick="toggleTheme()">
+                        <svg class="sun-icon icon" t="1742996723017" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="6698" width="16" height="16"><path d="M511.3 276.6c-130.1 0-235.9 105.8-235.9 235.9s105.8 235.9 235.9 235.9 235.9-105.8 235.9-235.9-105.8-235.9-235.9-235.9z m0 418.2C410.8 694.8 329 613 329 512.5s81.8-182.3 182.3-182.3c100.5 0 182.3 81.8 182.3 182.3s-81.7 182.3-182.3 182.3zM511.3 217c14.8 0 26.8-12 26.8-26.8v-98c0-14.8-12-26.8-26.8-26.8s-26.8 12-26.8 26.8v98c0.1 14.8 12 26.8 26.8 26.8zM264.5 303.6c5.2 5.2 12.1 7.8 18.9 7.8 6.9 0 13.7-2.6 18.9-7.8 10.5-10.5 10.5-27.4 0-37.9L233 196.4a26.738 26.738 0 0 0-37.9 0 26.738 26.738 0 0 0 0 37.9l69.4 69.3zM215.9 512.5c0-14.8-12-26.8-26.8-26.8h-98c-14.8 0-26.8 12-26.8 26.8s12 26.8 26.8 26.8h98c14.8 0 26.8-12 26.8-26.8zM264.5 721.4l-69.3 69.3a26.738 26.738 0 0 0 0 37.9c5.2 5.2 12.1 7.8 18.9 7.8 6.9 0 13.7-2.6 18.9-7.8l69.3-69.3c10.5-10.5 10.5-27.4 0-37.9-10.4-10.4-27.3-10.4-37.8 0zM511.3 808c-14.8 0-26.8 12-26.8 26.8v98c0 14.8 12 26.8 26.8 26.8s26.8-12 26.8-26.8v-98c0-14.8-12-26.8-26.8-26.8zM758.1 721.4a26.738 26.738 0 0 0-37.9 0 26.738 26.738 0 0 0 0 37.9l69.3 69.3c5.2 5.2 12.1 7.8 18.9 7.8 6.9 0 13.7-2.6 18.9-7.8 10.5-10.5 10.5-27.4 0-37.9l-69.2-69.3zM931.6 485.7h-98c-14.8 0-26.8 12-26.8 26.8s12 26.8 26.8 26.8h98c14.8 0 26.8-12 26.8-26.8s-12-26.8-26.8-26.8zM739.2 311.4c6.9 0 13.7-2.6 18.9-7.8l69.3-69.3c10.5-10.5 10.5-27.4 0-37.9a26.738 26.738 0 0 0-37.9 0l-69.3 69.3a26.738 26.738 0 0 0 0 37.9c5.3 5.2 12.1 7.8 19 7.8z" fill="currentColor" p-id="6699"></path></svg>
+                        <svg class="moon-icon icon" t="1742996842329" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="8730" width="16" height="16"><path d="M512 85.333333l10.709333 0.213334a12.288 12.288 0 0 1 9.429334 19.370666c-22.656 31.914667-36.48 53.76-41.514667 65.621334a277.333333 277.333333 0 0 0 350.250667 367.701333l11.776-4.522667c15.701333-6.528 35.370667-18.346667 59.008-35.498666A17.024 17.024 0 0 1 938.666667 512c0 9.6-0.298667 19.157333-0.938667 28.586667l-1.152 14.08-0.853333 7.68-1.706667 12.885333C903.466667 780.885333 726.144 938.666667 512 938.666667 276.352 938.666667 85.333333 747.648 85.333333 512c0-210.218667 152.064-384.938667 352.170667-420.181333l14.378667-2.261334 10.112-1.322666 7.338666-0.810667c14.037333-1.365333 28.245333-2.090667 42.666667-2.090667zM394.24 191.530667l-7.125333 2.688A341.461333 341.461333 0 0 0 512 853.333333a341.461333 341.461333 0 0 0 320.469333-223.616A362.666667 362.666667 0 0 1 394.24 191.530667z" fill="currentColor" p-id="8731"></path></svg>
+                        <span>Theme</span>
+                    </a>
                 </div>
             </div>
 
             <div class="content">
                 <div class="tab-container">
-                    <a href="#" class="tab active" data-tab="overview">概览</a>
-                    <a href="#" class="tab" data-tab="projects">项目库</a>
+                    <a href="#" class="tab active" data-tab="overview">Overview</a>
+                    <a href="#" class="tab" data-tab="projects">Projects</a>
                     <a href="#" class="tab" data-tab="stars">Stars</a>
                 </div>
 
                 <div class="content-area">
-                    <!-- 内容将通过 JavaScript 动态加载 -->
+                    <!-- Content will be loaded dynamically via JavaScript -->
                 </div>
             </div>
         </div>
@@ -74,16 +72,9 @@
                 <div class="copyright">
                     © 2024 Your Name. All rights reserved.
                 </div>
-                <div class="beian">
-                    <a href="https://beian.miit.gov.cn/" target="_blank">
-                        <img src="https://img.alicdn.com/tfs/TB1..50QpXXXXX7XpXXXXXXXXXX-40-40.png" alt="备案图标">
-                        Your ICP Number
-                    </a>
-                </div>
             </div>
         </div>
     </footer>
-
     <script src="/marked.min.js"></script>
     <script src="/main.js"></script>
 </body>
