--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Portfolio</title>
+    <title>GitHub 个人主页</title>
     <link rel="stylesheet" href="/github.min.css">
     <link rel="stylesheet" href="/github-dark.min.css">
     <script src="/highlight.min.js"></script>
@@ -14,53 +14,53 @@
         <div class="profile-section">
             <div class="profile-card">
                 <div class="profile-header">
-                    <img src="https://github.com/identicons/default.png" alt="Profile Image" class="profile-img">
+                    <img src="https://github.com/identicons/default.png" alt="个人照片" class="profile-img">
                     <div class="profile-info">
-                        <h1 class="profile-name">Your Name</h1>
-                        <div class="profile-login">@username</div>
+                        <h1 class="profile-name">YOUR_NAME</h1>
+                        <div class="profile-login">@YOUR_GITHUB_USERNAME</div>
                     </div>
                 </div>
                 
-                <p>Your bio here</p>
+                <p>YOUR_BIO</p>
                 
                 <div class="social-links">
-                    <a href="#" class="social-link" target="_blank">
+                    <a href="YOUR_BLOG_URL" class="social-link" target="_blank">
                         <svg t="1736847791705" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2554" width="200" height="200"><path d="M752 176c17.673 0 32 14.327 32 32v608c0 17.673-14.327 32-32 32H272c-17.673 0-32-14.327-32-32V208c0-17.673 14.327-32 32-32h480z m-480-48c-44.183 0-80 35.817-80 80v608c0 44.183 35.817 80 80 80h480c44.183 0 80-35.817 80-80V208c0-44.183-35.817-80-80-80H272z" p-id="2555"></path><path d="M320 712c0-13.255 10.745-24 24-24h336c13.255 0 24 10.745 24 24s-10.745 24-24 24H344c-13.255 0-24-10.745-24-24zM320 584c0-13.255 10.745-24 24-24h336c13.255 0 24 10.745 24 24s-10.745 24-24 24H344c-13.255 0-24-10.745-24-24zM576 312c0-13.255 10.745-24 24-24h80c13.255 0 24 10.745 24 24s-10.745 24-24 24h-80c-13.255 0-24-10.745-24-24zM576 456c0-13.255 10.745-24 24-24h80c13.255 0 24 10.745 24 24s-10.745 24-24 24h-80c-13.255 0-24-10.745-24-24zM344 288h144c13.255 0 24 10.745 24 24v144c0 13.255-10.745 24-24 24H344c-13.255 0-24-10.745-24-24V312c0-13.255 10.745-24 24-24z m24 144h96v-96h-96v96z" p-id="2556"></path></svg>
-                        <span>Blog</span>
+                        <span>个人博客</span>
                     </a>
                     <a href="#" class="social-link" onclick="showWechat(event)">
                         <svg t="1736847807869" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3632" width="200" height="200"><path d="M664.250054 368.541681c10.015098 0 19.892049 0.732687 29.67281 1.795902-26.647917-122.810047-159.358451-214.077703-310.826188-214.077703-169.353083 0-308.085774 114.232694-308.085774 259.274068 0 83.708494 46.165436 152.460344 123.281791 205.78483l-30.80868 91.730191 107.688651-53.455469c38.558178 7.53665 69.459978 15.308661 107.924012 15.308661 9.66308 0 19.230993-0.470721 28.752858-1.225921-6.025227-20.36584-9.521864-41.723264-9.521864-63.862493C402.328693 476.632491 517.908058 368.541681 664.250054 368.541681zM498.62897 285.87389c23.200398 0 38.557154 15.120372 38.557154 38.061874 0 22.846334-15.356756 38.156018-38.557154 38.156018-23.107277 0-46.260603-15.309684-46.260603-38.156018C452.368366 300.994262 475.522716 285.87389 498.62897 285.87389zM283.016307 362.090758c-23.107277 0-46.402843-15.309684-46.402843-38.156018 0-22.941502 23.295566-38.061874 46.402843-38.061874 23.081695 0 38.46301 15.120372 38.46301 38.061874C321.479317 346.782098 306.098002 362.090758 283.016307 362.090758zM945.448458 606.151333c0-121.888048-123.258255-221.236753-261.683954-221.236753-146.57838 0-262.015505 99.348706-262.015505 221.236753 0 122.06508 115.437126 221.200938 262.015505 221.200938 30.66644 0 61.617359-7.609305 92.423993-15.262612l84.513836 45.786813-23.178909-76.17082C899.379213 735.776599 945.448458 674.90216 945.448458 606.151333zM598.803483 567.994292c-15.332197 0-30.807656-15.096836-30.807656-30.501688 0-15.190981 15.47546-30.477129 30.807656-30.477129 23.295566 0 38.558178 15.286148 38.558178 30.477129C637.361661 552.897456 622.099049 567.994292 598.803483 567.994292zM768.25071 567.994292c-15.213493 0-30.594809-15.096836-30.594809-30.501688 0-15.190981 15.381315-30.477129 30.594809-30.477129 23.107277 0 38.558178 15.286148 38.558178 30.477129C806.808888 552.897456 791.357987 567.994292 768.25071 567.994292z" p-id="3633"></path></svg>
-                        <span>WeChat</span>
+                        <span>微信</span>
                     </a>
                     <a href="#" class="social-link" onclick="showQQ(event)">
                         <svg t="1736847742177" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1534" id="mx_n_1736847742178" width="200" height="200"><path d="M824.8 613.2c-16-51.4-34.4-94.6-62.7-165.3C766.5 262.2 689.3 112 511.5 112 331.7 112 256.2 265.2 261 447.9c-28.4 70.8-46.7 113.7-62.7 165.3-34 109.5-23 154.8-14.6 155.8 18 2.2 70.1-82.4 70.1-82.4 0 49 25.2 112.9 79.8 159-26.4 8.1-85.7 29.9-71.6 53.8 11.4 19.3 196.2 12.3 249.5 6.3 53.3 6 238.1 13 249.5-6.3 14.1-23.8-45.3-45.7-71.6-53.8 54.6-46.2 79.8-110.1 79.8-159 0 0 52.1 84.6 70.1 82.4 8.5-1.1 19.5-46.4-14.5-155.8z" p-id="1535"></path></svg>
                         <span>QQ</span>
                     </a>
-                    <a href="mailto:your.email@example.com" class="social-link">
+                    <a href="mailto:YOUR_EMAIL" class="social-link">
                         <svg height="16" viewBox="0 0 16 16" width="16">
                             <path d="M1.75 2h12.5c.966 0 1.75.784 1.75 1.75v8.5A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25v-8.5C0 2.784.784 2 1.75 2ZM1.5 12.251c0 .138.112.25.25.25h12.5a.25.25 0 0 0 .25-.25V5.809L8.38 9.397a.75.75 0 0 1-.76 0L1.5 5.809v6.442Zm13-8.181v-.32a.25.25 0 0 0-.25-.25H1.75a.25.25 0 0 0-.25.25v.32L8 7.88Z"></path>
                         </svg>
-                        <span>Email</span>
+                        <span>邮箱</span>
                     </a>
                 </div>
                 <div class="stats">
                     <a href="#" class="social-link theme-switch" onclick="toggleTheme()">
                         <svg class="sun-icon icon" t="1742996723017" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="6698" width="16" height="16"><path d="M511.3 276.6c-130.1 0-235.9 105.8-235.9 235.9s105.8 235.9 235.9 235.9 235.9-105.8 235.9-235.9-105.8-235.9-235.9-235.9z m0 418.2C410.8 694.8 329 613 329 512.5s81.8-182.3 182.3-182.3c100.5 0 182.3 81.8 182.3 182.3s-81.7 182.3-182.3 182.3zM511.3 217c14.8 0 26.8-12 26.8-26.8v-98c0-14.8-12-26.8-26.8-26.8s-26.8 12-26.8 26.8v98c0.1 14.8 12 26.8 26.8 26.8zM264.5 303.6c5.2 5.2 12.1 7.8 18.9 7.8 6.9 0 13.7-2.6 18.9-7.8 10.5-10.5 10.5-27.4 0-37.9L233 196.4a26.738 26.738 0 0 0-37.9 0 26.738 26.738 0 0 0 0 37.9l69.4 69.3zM215.9 512.5c0-14.8-12-26.8-26.8-26.8h-98c-14.8 0-26.8 12-26.8 26.8s12 26.8 26.8 26.8h98c14.8 0 26.8-12 26.8-26.8zM264.5 721.4l-69.3 69.3a26.738 26.738 0 0 0 0 37.9c5.2 5.2 12.1 7.8 18.9 7.8 6.9 0 13.7-2.6 18.9-7.8l69.3-69.3c10.5-10.5 10.5-27.4 0-37.9-10.4-10.4-27.3-10.4-37.8 0zM511.3 808c-14.8 0-26.8 12-26.8 26.8v98c0 14.8 12 26.8 26.8 26.8s26.8-12 26.8-26.8v-98c0-14.8-12-26.8-26.8-26.8zM758.1 721.4a26.738 26.738 0 0 0-37.9 0 26.738 26.738 0 0 0 0 37.9l69.3 69.3c5.2 5.2 12.1 7.8 18.9 7.8 6.9 0 13.7-2.6 18.9-7.8 10.5-10.5 10.5-27.4 0-37.9l-69.2-69.3zM931.6 485.7h-98c-14.8 0-26.8 12-26.8 26.8s12 26.8 26.8 26.8h98c14.8 0 26.8-12 26.8-26.8s-12-26.8-26.8-26.8zM739.2 311.4c6.9 0 13.7-2.6 18.9-7.8l69.3-69.3c10.5-10.5 10.5-27.4 0-37.9a26.738 26.738 0 0 0-37.9 0l-69.3 69.3a26.738 26.738 0 0 0 0 37.9c5.3 5.2 12.1 7.8 19 7.8z" fill="currentColor" p-id="6699"></path></svg>
                         <svg class="moon-icon icon" t="1742996842329" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="8730" width="16" height="16"><path d="M512 85.333333l10.709333 0.213334a12.288 12.288 0 0 1 9.429334 19.370666c-22.656 31.914667-36.48 53.76-41.514667 65.621334a277.333333 277.333333 0 0 0 350.250667 367.701333l11.776-4.522667c15.701333-6.528 35.370667-18.346667 59.008-35.498666A17.024 17.024 0 0 1 938.666667 512c0 9.6-0.298667 19.157333-0.938667 28.586667l-1.152 14.08-0.853333 7.68-1.706667 12.885333C903.466667 780.885333 726.144 938.666667 512 938.666667 276.352 938.666667 85.333333 747.648 85.333333 512c0-210.218667 152.064-384.938667 352.170667-420.181333l14.378667-2.261334 10.112-1.322666 7.338666-0.810667c14.037333-1.365333 28.245333-2.090667 42.666667-2.090667zM394.24 191.530667l-7.125333 2.688A341.461333 341.461333 0 0 0 512 853.333333a341.461333 341.461333 0 0 0 320.469333-223.616A362.666667 362.666667 0 0 1 394.24 191.530667z" fill="currentColor" p-id="8731"></path></svg>
-                        <span>Theme</span>
+                        <span>主题切换</span>
                     </a>
                 </div>
             </div>
 
             <div class="content">
                 <div class="tab-container">
-                    <a href="#" class="tab active" data-tab="overview">Overview</a>
-                    <a href="#" class="tab" data-tab="projects">Projects</a>
+                    <a href="#" class="tab active" data-tab="overview">概览</a>
+                    <a href="#" class="tab" data-tab="projects">项目库</a>
                     <a href="#" class="tab" data-tab="stars">Stars</a>
                 </div>
 
                 <div class="content-area">
-                    <!-- Content will be loaded dynamically via JavaScript -->
+                    <!-- 内容将通过 JavaScript 动态加载 -->
                 </div>
             </div>
         </div>
@@ -70,8 +70,17 @@
         <div class="container">
             <div class="footer-content">
                 <div class="copyright">
-                    © 2024 Your Name. All rights reserved.
+                    © 2024 YOUR_NAME. All rights reserved.
                 </div>
+                <div class="beian">
+                    <a href="https://beian.miit.gov.cn/" target="_blank">
+                        <img src="https://img.alicdn.com/tfs/TB1..50QpXXXXX7XpXXXXXXXXXX-40-40.png" alt="备案图标">
+                        YOUR_ICP_NUMBER
+                    </a>
+                </div>
+                <a href="YOUR_STATUS_PAGE_URL" target="_blank">
+                    <img src="YOUR_STATUS_BADGE_URL" alt="状态徽章">
+                </a>
             </div>
         </div>
     </footer>
